# lorepia_dev

./: .gitattributes  .gitignore  Cargo.toml  LorePia_기술계획서_v1.md  LorePia_기술계획서_v2.md  NOTICE  README.md
apps/desktop-mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev-size.conf.json
apps/desktop-mobile/src-tauri/capabilities/: default.json
apps/desktop-mobile/src-tauri/src/: app_commands.rs  asset_commands.rs  credential_commands.rs  lib.rs  main.rs  provider_stream.rs  safety_commands.rs  storage_commands.rs
crates/lorepia-assets/: Cargo.toml  README.md
crates/lorepia-assets/src/: catalog.rs  error.rs  lib.rs  mime.rs  model.rs  secure_fs.rs  store.rs
crates/lorepia-assets/tests/: assets.rs
crates/lorepia-backup/: Cargo.toml  README.md
crates/lorepia-backup/src/: error.rs  export.rs  fsutil.rs  journal.rs  lib.rs  manifest.rs  model.rs  restore.rs  secret.rs  sqlite.rs
crates/lorepia-backup/tests/: backup.rs
crates/lorepia-core/: Cargo.toml
crates/lorepia-core/src/: lib.rs
crates/lorepia-credential-vault/: Cargo.toml
crates/lorepia-credential-vault/src/: backend.rs  error.rs  lib.rs  secret.rs  vault.rs
crates/lorepia-import/: ASSET_TEST_COVERAGE.md  Cargo.toml
crates/lorepia-import/src/: error.rs  lib.rs  model.rs  path_policy.rs  png_policy.rs  service.rs
crates/lorepia-import/tests/: admission.rs
crates/lorepia-lorebook/: Cargo.toml  README.md
crates/lorepia-lorebook/src/: engine.rs  error.rs  import.rs  lib.rs  model.rs  normalize.rs
crates/lorepia-lorebook/tests/: lorebook.rs
crates/lorepia-memory/: Cargo.toml
crates/lorepia-memory/src/: artifact.rs  budget.rs  chunk.rs  config.rs  error.rs  id.rs  lib.rs  retrieval.rs  session.rs  storage.rs  summary.rs
crates/lorepia-persona/: Cargo.toml
crates/lorepia-persona/src/: catalog.rs  error.rs  id.rs  lib.rs  storage.rs
crates/lorepia-prompt/: Cargo.toml
crates/lorepia-prompt/src/: compile.rs  error.rs  import.rs  lib.rs  regex_pipeline.rs  schema.rs  template.rs  validate.rs
crates/lorepia-provider-runtime/: Cargo.toml  NETWORK_CHAOS.md
crates/lorepia-provider-runtime/src/: client.rs  credential.rs  endpoint.rs  error.rs  event.rs  lib.rs  network_fault_tests.rs  runner.rs  token_count.rs
crates/lorepia-provider-runtime/src/decode/: anthropic.rs  deepseek.rs  google.rs  mod.rs  ollama.rs  openai.rs
crates/lorepia-provider-runtime/src/framing/: mod.rs  ndjson.rs  sse.rs
crates/lorepia-provider-runtime/src/testdata/: README.md  self-signed-cert.der.hex  self-signed-key.der.hex
crates/lorepia-providers/: Cargo.toml  README.md
crates/lorepia-providers/src/: capabilities.rs  compile.rs  config.rs  error.rs  lib.rs
crates/lorepia-safety/: Cargo.toml
crates/lorepia-safety/src/: diagnostics.rs  disclosure.rs  error.rs  lib.rs  report.rs
crates/lorepia-safety/tests/: safety.rs
crates/lorepia-storage/: Cargo.toml
crates/lorepia-storage/migrations/: 0001_chat_persistence.sql  0002_stream_journal.sql  0003_branching_cache_wal.sql
crates/lorepia-storage/src/: error.rs  id.rs  lib.rs  migration.rs  model.rs  store.rs
crates/lorepia-storage/tests/: branching.rs  concurrency.rs  migration.rs  persistence.rs  query_plan.rs  render_cache.rs  streaming.rs  wal.rs
crates/lorepia-storage/tests/common/: mod.rs
crates/lorepia-tool-runtime/: Cargo.toml  README.md
crates/lorepia-tool-runtime/src/: error.rs  json.rs  lib.rs  mcp.rs  policy.rs  registry.rs  schema.rs
crates/lorepia-tool-runtime/tests/: contracts.rs
crates/tauri-plugin-native-back/: Cargo.toml  build.rs
crates/tauri-plugin-native-back/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
crates/tauri-plugin-native-back/ios/: Package.swift
crates/tauri-plugin-native-back/ios/Sources/: NativeBackPlugin.swift
crates/tauri-plugin-native-back/permissions/: default.toml
crates/tauri-plugin-native-back/permissions/autogenerated/: reference.md
crates/tauri-plugin-native-back/permissions/schemas/: schema.json
crates/tauri-plugin-native-back/src/: android.rs  commands.rs  error.rs  fallback.rs  ios.rs  lib.rs  models.rs
crates/tauri-plugin-native-chrome/: Cargo.toml  build.rs
crates/tauri-plugin-native-chrome/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
crates/tauri-plugin-native-chrome/ios/: Package.swift
crates/tauri-plugin-native-chrome/ios/Sources/: NativeChromePlugin.swift
crates/tauri-plugin-native-chrome/permissions/: default.toml
crates/tauri-plugin-native-chrome/permissions/autogenerated/: reference.md
crates/tauri-plugin-native-chrome/permissions/schemas/: schema.json
crates/tauri-plugin-native-chrome/src/: android.rs  commands.rs  error.rs  fallback.rs  ios.rs  lib.rs  models.rs
spikes/audio-playback/src-tauri/: Cargo.toml  tauri.conf.json
spikes/audio-playback/src-tauri/capabilities/: default.json
spikes/audio-playback/src-tauri/src/: lib.rs  main.rs
spikes/import-hardening/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spikes/import-hardening/src-tauri/capabilities/: default.json
spikes/import-hardening/src-tauri/src/: app_commands.rs  lib.rs  main.rs  probe.rs
spikes/keychain/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spikes/keychain/src-tauri/capabilities/: default.json
spikes/keychain/src-tauri/src/: app_commands.rs  backend.rs  lib.rs  main.rs  probe.rs
spikes/lua-limits/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spikes/lua-limits/src-tauri/capabilities/: default.json
spikes/lua-limits/src-tauri/src/: app_commands.rs  lib.rs  main.rs  probe.rs
spikes/script-runner/src-tauri/: Cargo.toml  tauri.conf.json
spikes/script-runner/src-tauri/capabilities/: default.json
spikes/script-runner/src-tauri/src/: lib.rs  main.rs
spikes/sqlite-fts/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spikes/sqlite-fts/src-tauri/capabilities/: default.json
spikes/sqlite-fts/src-tauri/src/: app_commands.rs  lib.rs  main.rs  probe.rs
tools/lorepia-loadgen/: Cargo.toml  README.md
tools/lorepia-loadgen/src/: args.rs  assets.rs  bench.rs  db.rs  main.rs  stream.rs  util.rs  verify.rs
(+586 files in other folders)
