[workspace]
resolver = "2"
members = [
  "apps/desktop-mobile/src-tauri",
  "crates/lorepia-core",
]
exclude = [
  "spikes/audio-playback/src-tauri",
  "spikes/channel-stream/src-tauri",
  "spikes/import-hardening/src-tauri",
  "spikes/keychain/src-tauri",
  "spikes/lua-limits/src-tauri",
  "spikes/script-runner/src-tauri",
  "spikes/sqlite-fts/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["LorePia contributors"]
repository = "https://github.com/TokenGourmet/lorepia_dev"

[workspace.dependencies]
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
tauri = { version = "=2.11.5", features = [] }
tauri-build = { version = "=2.6.3", features = [] }
