[package]
name = "lorepia-assets"
description = "Bounded content-addressed asset storage for LorePia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hex = "=0.4.3"
rusqlite = { version = "=0.40.1", default-features = false, features = ["backup", "bundled"] }
sha2 = "=0.10.9"
thiserror = "=2.0.19"
uuid = { version = "=1.24.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
rustix = { version = "=1.1.4", features = ["fs"] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "forbid"
