[package]
name = "lorepia-backup"
description = "Resumable, verified directory backup and restore for LorePia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fs2 = "=0.4.3"
hex = "=0.4.3"
lorepia-assets = { path = "../lorepia-assets" }
lorepia-storage = { path = "../lorepia-storage" }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "=0.10.9"
thiserror = "=2.0.19"
tempfile = "=3.27.0"
uuid = { version = "=1.24.0", features = ["v4"] }

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
