[package]
name = "lorepia-import"
description = "Bounded ZIP and PNG character-card admission for LorePia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crc32fast = "=1.5.0"
lorepia-assets = { path = "../lorepia-assets" }
png = "=0.18.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "=0.10.9"
thiserror = "=2.0.19"
unicode-normalization = "=0.1.25"
uuid = { version = "=1.24.0", features = ["v4"] }
zip = { version = "=8.6.0", default-features = false, features = ["deflate-flate2"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "forbid"
