[package]
name = "lorepia-memory"
description = "UI-independent long-term memory policy, planning, and retrieval for LorePia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lorepia-persona = { path = "../lorepia-persona" }
lorepia-prompt = { path = "../lorepia-prompt" }
lorepia-providers = { path = "../lorepia-providers" }
regex = "=1.13.1"
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
sha2 = "=0.10.9"

[lints.rust]
unsafe_code = "forbid"
