[package]
name = "lorepia-persona"
description = "UI-independent persona catalog and play-session binding for LorePia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lorepia-prompt = { path = "../lorepia-prompt" }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }

[lints.rust]
unsafe_code = "forbid"
