[package]
name = "lorepia-provider-runtime"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["LorePia contributors"]
repository = "https://github.com/TokenGourmet/lorepia_dev"
description = "Headless, bounded native streaming runtime for LorePia LLM providers"

[dependencies]
bytes = "=1.12.1"
futures-util = "=0.3.33"
lorepia-prompt = { path = "../lorepia-prompt" }
lorepia-providers = { path = "../lorepia-providers" }
reqwest = { version = "=0.13.4", default-features = false, features = ["http2", "json", "rustls", "stream"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.53.0", features = ["macros", "net", "rt", "sync", "time"] }
tokio-util = { version = "=0.7.18", features = ["rt"] }
url = "=2.5.8"
zeroize = "=1.9.0"

[dev-dependencies]
rustls = { version = "=0.23.42", default-features = false, features = ["aws_lc_rs", "std"] }
tokio = { version = "=1.53.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
