[package]
name = "lorepia-providers"
description = "UI-independent LLM provider configuration and request compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
