[package]
name = "lorepia-storage"
description = "SQLite-backed product persistence contracts for LorePia"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fs2 = "=0.4.3"
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
serde.workspace = true
thiserror = "=2.0.19"
uuid = { version = "=1.24.0", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "forbid"
