[package]
name = "tauri-plugin-native-back"
description = "LorePia iOS and Android native interactive back navigation bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
links = "tauri-plugin-native-back"
build = "build.rs"

[dependencies]
serde.workspace = true
tauri.workspace = true
thiserror = "=2.0.19"

[build-dependencies]
tauri-plugin = { version = "=2.6.3", features = ["build"] }
