[package]
name = "lorepia-script-runner-spike"
version = "0.1.0"
description = "LorePia M-1 terminable QuickJS-WASM worker boundary"
authors = ["LorePia contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "spikesscriptrunner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
