[package]
name = "lorepia-sqlite-fts-spike"
version = "0.1.0"
description = "LorePia M-1 file-backed SQLite and FTS5 probe"
authors = ["LorePia contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "spikessqlitefts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = [] }

[dev-dependencies]
tempfile = "=3.27.0"
